Terminado el maquetado

--- a/src/components/MainWeather/Hightlights/HightligContainer/Hightlights.module.css
+++ b/src/components/MainWeather/Hightlights/HightligContainer/Hightlights.module.css
@@ -2,5 +2,7 @@
   display: flex;
   flex-wrap: wrap;
   color: #e7e7eb;
-  justify-content: center;
+  margin-left: 4rem;
+  margin-right: 5rem;
+  justify-content: space-around;
 }
