--- a/src/components/MainWeather/Hightlights/Visibility/Visibility.module.css
+++ b/src/components/MainWeather/Hightlights/Visibility/Visibility.module.css
@@ -1,17 +1,14 @@
-.airContainer {
+@import url("https://fonts.googleapis.com/css2?family=Raleway:ital,wght@1,500;1,700&display=swap");
+
+.visibilityContainer {
   margin-top: 48px;
   justify-content: center;
   text-align: center;
   width: 20.5rem;
   height: 9.938rem;
   background: #1e213a;
-  /* margin-left: -3.5rem; */
+  margin-right: 3rem;
 }
-
-.numberContainer {
-  margin-top: 10px;
-}
-
 .title {
   display: block;
   margin-top: 22px;
@@ -22,14 +19,19 @@
   line-height: 19px;
 }
 
-.number {
+.visibilityNumContainer {
+  margin-top: 10px;
+}
+
+.num {
   font-family: Raleway;
   font-style: normal;
   font-weight: 700;
   font-size: 64px;
   line-height: 75.14px;
 }
-.mb {
+
+.miles {
   font-family: Raleway;
   font-style: normal;
   font-weight: 500;
