--- a/src/components/MainWeather/MainLocation/MainWeather.module.css
+++ b/src/components/MainWeather/MainLocation/MainWeather.module.css
@@ -1,97 +1,18 @@
 .container {
   width: 68%;
   background: #100e1d;
-  padding-bottom: 50px;
+  padding-bottom: 3.125rem;
 }
 
 .span {
   display: block;
-  margin-top: 72px;
-  margin-left: 70px;
+  margin-top: 2.5rem;
+  margin-left: 5.6rem;
+  margin-bottom: 1.25rem;
   font-family: Raleway;
   font-style: normal;
   font-weight: bold;
   font-size: 24px;
   line-height: 28px;
   color: #e7e7eb;
-}
-.hightlightsContainer {
-  display: flex;
-  flex-wrap: wrap;
-  color: #e7e7eb;
-  justify-content: center;
-}
-
-.windContainer {
-  justify-content: center;
-  text-align: center;
-  width: 328px;
-  height: 204px;
-  background: #1e213a;
-  margin-right: 48px;
-}
-
-.windTitle {
-  display: block;
-  margin-top: 22px;
-  font-family: Raleway;
-  font-style: normal;
-  font-weight: 500;
-  font-size: 16px;
-  line-height: 19px;
-}
-
-.humidity {
-  width: 328px;
-  height: 204px;
-  background: #1e213a;
-}
-.visibility {
-  margin-top: 48px;
-  width: 328px;
-  height: 159px;
-  margin-right: 48px;
-  background: #1e213a;
-}
-.air {
-  margin-top: 48px;
-  width: 328px;
-  height: 159px;
-  background: #1e213a;
-}
-.windVelContainer {
-  margin-top: 6px;
-}
-
-.windNumber {
-  font-family: Raleway;
-  font-style: normal;
-  font-weight: 700;
-  font-size: 64px;
-  line-height: 75.14px;
-}
-.windMph {
-  font-family: Raleway;
-  font-style: normal;
-  font-weight: 500;
-  font-size: 36px;
-  line-height: 42.26px;
-}
-
-.windDirectionContainer {
-  display: flex;
-  justify-content: center;
-}
-
-.windCircle {
-  width: 29.49px;
-  height: 29.49px;
-  background: rgba(255, 255, 255, 0.3);
-  -moz-border-radius: 50px;
-  -webkit-border-radius: 50px;
-  border-radius: 50px;
-}
-
-.directionArrow {
-  /* background: #e7e7eb; */
 }
