Se crea diseño responsivo

--- a/src/components/MainWeather/Hightlights/Humidity/Humidity.module.css
+++ b/src/components/MainWeather/Hightlights/Humidity/Humidity.module.css
@@ -4,7 +4,7 @@
   width: 20.5rem;
   height: 12.75rem;
   background: #1e213a;
-  /* margin-left: -3.5rem; */
+ margin-top: 48px;
 }
 
 .humidityTitle {
