--- a/src/components/MainWeather/MainLocation/MainWeather.module.css
+++ b/src/components/MainWeather/MainLocation/MainWeather.module.css
@@ -8,11 +8,16 @@
   display: block;
   margin-top: 2.5rem;
   margin-left: 5.6rem;
-  margin-bottom: 1.25rem;
   font-family: Raleway;
   font-style: normal;
   font-weight: bold;
   font-size: 24px;
   line-height: 28px;
   color: #e7e7eb;
+}
+
+@media (max-width:560px) {
+  .container{
+    width: 100%;
+  }
 }
