--- a/src/components/SideLocation/clouds/Clouds.module.css
+++ b/src/components/SideLocation/clouds/Clouds.module.css
@@ -1,20 +1,28 @@
+.imgCentralContainer{
+  display: flex;
+  justify-content: center;
+  margin-top: -7rem;
+}
+.imgCentral {
+  height: 11rem;
+  position: relative;
+}
+
+
 .imgCloud1 {
-  position: absolute;
-  margin-left: -9rem;
-  margin-top: 25rem;
+  position: relative;
+  left: -20%;
+  width: 44%;
 }
+
 .imgCloud2 {
-  position: absolute;
-  margin-top: 10rem;
-  margin-left: 9rem;
+  position: relative;
+  left: 31%;
+  width: 44%;
 }
-.imgCloud3 {
-  position: absolute;
-  margin-left: 5rem;
-  margin-top: -9rem;
-}
+
+
 .imgCloud4 {
-  position: absolute;
-  margin-left: -14rem;
-  margin-top: -1rem;
+  position: relative;
+
 }
